@@ -19,6 +19,7 @@ NOCC 1.8.3  ???? ??, ????
     * RFE #2976406 : Check for SPAM header flags (Tim Gerundt).
 
   Misc
+    * Drop $conf->display_part_no (Tim Gerundt).
     * Fix empty attachment names in some cases (Tim Gerundt).
     * Add date to RSS feed items (Tim Gerundt).
     * Fix problem with "Sent:" label (Tim Gerundt).
